# sentinel-purge

./: .coderabbit.yaml  .copilotignore  Cargo.toml  README.md
.github/: IMPLEMENTATION_SUMMARY.md  README.md  copilot-instructions.md
.github/ISSUE_TEMPLATE/: README.md  bug-report.md  config.yml  covert-operations.md  cross-platform-agent.md  detection-engine.md  feature-request.md  platform-specific.md  security-implementation.md
.github/workflows/: issue-management.yml
docs/: stealth-component.md
issues/: 01-cross-platform-agent.md  02-security-considerations.md  03-hybrid-scanning-engine.md  04-forensic-baseline-mapping.md  05-memory-kernel-analysis.md  06-network-sinkhole-monitor.md  07-slow-burn-remediation.md  08-isolation-recovery.md  09-covert-mode.md  10-windows-adaptations.md  11-linux-adaptations.md  12-macos-adaptations.md  13-ui-logging.md  14-optional-modules.md  README.md
src/: config.rs  error.rs  lib.rs  main.rs
src/stealth/: communication.rs  controller.rs  evasion.rs  identity.rs  mod.rs  sleep.rs
src/stealth/platform/: linux.rs  macos.rs  mod.rs  windows.rs
tests/: stealth_integration.rs
